[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pathforge"
version = "0.1.1"
description = "Simulate realistic financial markets from historical price data"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pathforge*"]
